syntax = "proto3";

package com.huskyapply.brain.proto;

option java_package = "com.huskyapply.brain.proto";
option java_outer_classname = "JobProcessingProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

// Job processing status
enum JobStatus {
  JOB_STATUS_PENDING = 0;
  JOB_STATUS_PROCESSING = 1;
  JOB_STATUS_COMPLETED = 2;
  JOB_STATUS_FAILED = 3;
  JOB_STATUS_CANCELLED = 4;
  JOB_STATUS_QUEUED = 5;
}

// Service health status
enum ServiceStatus {
  SERVICE_STATUS_HEALTHY = 0;
  SERVICE_STATUS_DEGRADED = 1;
  SERVICE_STATUS_UNHEALTHY = 2;
}

// Batch processing status
enum BatchStatus {
  BATCH_STATUS_PENDING = 0;
  BATCH_STATUS_PROCESSING = 1;
  BATCH_STATUS_COMPLETED = 2;
  BATCH_STATUS_FAILED = 3;
  BATCH_STATUS_CANCELLED = 4;
}

// Job submission request
message JobSubmissionRequest {
  string job_id = 1;
  string jd_url = 2;
  string resume_uri = 3;
  string model_provider = 4;
  string model_name = 5;
  string user_id = 6;
  int32 priority = 7;
  string trace_id = 8;
  map<string, string> options = 9;
}

// Job submission response
message JobSubmissionResponse {
  string job_id = 1;
  JobStatus status = 2;
  string message = 3;
  google.protobuf.Timestamp submitted_at = 4;
  int32 queue_position = 5;
  int64 estimated_completion_ms = 6;
}

// Job update request for streaming
message JobUpdateRequest {
  repeated string job_ids = 1;
  string user_id = 2;
  bool include_content = 3;
}

// Job update response for streaming
message JobUpdateResponse {
  string job_id = 1;
  JobStatus status = 2;
  google.protobuf.Timestamp updated_at = 3;
  string message = 4;
  string content_chunk = 5;
  bool is_partial = 6;
  map<string, string> metadata = 7;
}

// Batch job request
message BatchJobRequest {
  string batch_id = 1;
  repeated JobSubmissionRequest jobs = 2;
  string user_id = 3;
  int32 max_parallel = 4;
}

// Batch job response
message BatchJobResponse {
  string batch_id = 1;
  int32 total_jobs = 2;
  int32 completed_jobs = 3;
  int32 failed_jobs = 4;
  repeated JobUpdateResponse job_updates = 5;
  BatchStatus batch_status = 6;
}

// Job result request
message JobResultRequest {
  string job_id = 1;
  string user_id = 2;
}

// Generated content
message GeneratedContent {
  string content_type = 1;
  string content = 2;
  int32 word_count = 3;
  double quality_score = 4;
}

// Processing metadata
message ProcessingMetadata {
  string model_used = 1;
  double cost_usd = 2;
  int64 processing_time_ms = 3;
  bool cached = 4;
  int32 tokens_used = 5;
}

// Job result response
message JobResultResponse {
  string job_id = 1;
  JobStatus status = 2;
  GeneratedContent content = 3;
  ProcessingMetadata metadata = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Health check request
message HealthRequest {
  string service_id = 1;
}

// Resource usage
message ResourceUsage {
  double cpu_percent = 1;
  double memory_percent = 2;
  double memory_used_mb = 3;
  int32 active_connections = 4;
  int32 thread_count = 5;
}

// Health check response
message HealthResponse {
  ServiceStatus status = 1;
  string version = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, int32> dependencies = 4;
  ResourceUsage resource_usage = 5;
}

// Cancel job request
message CancelJobRequest {
  string job_id = 1;
  string user_id = 2;
  string reason = 3;
}

// Cancel job response
message CancelJobResponse {
  string job_id = 1;
  bool cancelled = 2;
  string message = 3;
  JobStatus final_status = 4;
}

// Metrics request
message MetricsRequest {
  string service_id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

// Performance stats
message PerformanceStats {
  double avg_processing_time_ms = 1;
  double p95_processing_time_ms = 2;
  double p99_processing_time_ms = 3;
  int64 total_requests = 4;
  int64 successful_requests = 5;
  int64 failed_requests = 6;
  double throughput_per_second = 7;
}

// Queue stats
message QueueStats {
  int32 pending_jobs = 1;
  int32 processing_jobs = 2;
  int32 total_queued = 3;
  double avg_wait_time_ms = 4;
}

// Processing metrics
message ProcessingMetrics {
  string service_name = 1;
  google.protobuf.Timestamp timestamp = 2;
  ResourceUsage resource_usage = 3;
  PerformanceStats performance = 4;
  QueueStats queue_stats = 5;
  map<string, double> custom_metrics = 6;
}

// Aggregated stats
message AggregatedStats {
  int64 total_jobs_processed = 1;
  double total_cost_usd = 2;
  double avg_quality_score = 3;
  double cache_hit_rate = 4;
  int64 total_processing_time_ms = 5;
}

// Metrics response
message MetricsResponse {
  repeated ProcessingMetrics metrics = 1;
  AggregatedStats aggregated = 2;
}

// Job status update (for callbacks from Brain to Gateway)
message JobStatusUpdate {
  string job_id = 1;
  JobStatus status = 2;
  string message = 3;
  google.protobuf.Timestamp updated_at = 4;
  map<string, string> metadata = 5;
}

// Status update acknowledgment
message StatusUpdateAck {
  bool acknowledged = 1;
  string message = 2;
}

// Brain Job Processing Service
service JobProcessingService {
  // Submit a single job for processing
  rpc SubmitJob(JobSubmissionRequest) returns (JobSubmissionResponse);

  // Stream job updates in real-time
  rpc StreamJobUpdates(JobUpdateRequest) returns (stream JobUpdateResponse);

  // Process multiple jobs in a batch
  rpc ProcessJobBatch(stream BatchJobRequest) returns (stream BatchJobResponse);

  // Get job processing result
  rpc GetJobResult(JobResultRequest) returns (JobResultResponse);

  // Health check
  rpc HealthCheck(HealthRequest) returns (HealthResponse);

  // Cancel a job
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);

  // Get processing metrics
  rpc GetProcessingMetrics(MetricsRequest) returns (MetricsResponse);
}

// Gateway Callback Service (for Brain to notify Gateway)
service GatewayCallbackService {
  // Update job status
  rpc UpdateJobStatus(JobStatusUpdate) returns (StatusUpdateAck);
}
